--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,42 +1,3 @@
-@font-face {
-    font-family: 'Mono Social Icons Font';
-    src: url('../font/MonoSocialIconsFont-1.10.eot');
-    src: url('../font/MonoSocialIconsFont-1.10.eot?#iefix') format('embedded-opentype'),
-         url('../font/MonoSocialIconsFont-1.10.woff') format('woff'),
-         url('../font/MonoSocialIconsFont-1.10.ttf') format('truetype'),
-         url('../font/MonoSocialIconsFont-1.10.svg#MonoSocialIconsFont') format('svg');
-    src: url('../font/MonoSocialIconsFont-1.10.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-.symbol, a.symbol:before {
-    font-family: 'Mono Social Icons Font';
-    -webkit-text-rendering: optimizeLegibility;
-    -moz-text-rendering: optimizeLegibility;
-    -ms-text-rendering: optimizeLegibility;
-    -o-text-rendering: optimizeLegibility;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
-    -ms-font-smoothing: antialiased;
-    -o-font-smoothing: antialiased;
-    font-smoothing: antialiased;
-}
-
-a.symbol:before {
-    content: attr(title);
-    margin-right: 0.3em;
-    font-size: 130%;
-}
-
-a.symbol {
-    background: #9f9f9f;
-    padding: 7px 5px 3px 5px;
-    color: white;
-    text-decoration: none;
-}
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -213,4 +174,31 @@ table td {
     vertical-align: middle;
     margin-right: 7px;
     border: 0px;
+}
+
+@font-face {
+    font-family: 'Mono Social Icons Font';
+    src: url('../font/MonoSocialIconsFont-1.10.eot');
+    src: url('../font/MonoSocialIconsFont-1.10.eot?#iefix') format('embedded-opentype'),
+         url('../font/MonoSocialIconsFont-1.10.woff') format('woff'),
+         url('../font/MonoSocialIconsFont-1.10.ttf') format('truetype'),
+         url('../font/MonoSocialIconsFont-1.10.svg#MonoSocialIconsFont') format('svg');
+    src: url('../font/MonoSocialIconsFont-1.10.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.symbol {
+    font-family: 'Mono Social Icons Font';
+    -webkit-text-rendering: optimizeLegibility;
+    -moz-text-rendering: optimizeLegibility;
+    -ms-text-rendering: optimizeLegibility;
+    -o-text-rendering: optimizeLegibility;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    -ms-font-smoothing: antialiased;
+    -o-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    font-size: 130%;
 }
