--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,194 +1,27 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
 body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
+    font-family: monospace;
 }
 
-body {
-    background-color: #073642;
-    font-size: 18pt;
-    line-height: 24pt;
-    font-family: Helvetica, Arial, Sans-Serif;
-    color: #222;
-}
-
-table td {
-    vertical-align: top;
-}
-
-#outer {
-    display: inline-block;
-    padding: 17px;
-    opacity: 0.95;
-    text-align: left;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    border-radius: 7px;
-}
-
-#inner {
-    background-color: #eee8d5;
-    color: #586e75;
-    padding: 30px 50px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    border-radius: 7px;
-}
-
-#bio {
-    text-align: right;
-    padding-right: 40px;
-    margin-right: 20px;
-}
-
-#description {
-    font-family: 'Droid Sans', arial, serif; 
-    font-size: 12pt;
-    margin: 10px 0px;
-    text-align: left;
-}
-
-#description a {
-    color: #23C;
-    text-decoration: none;
-    border-bottom: dotted 1px #ccb;
-    padding: 2px 2px 0px 2px;
-    -webkit-transition: all 0.1s ease-in-out;
-    -moz-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-}
-
-#description a:HOVER {
-    background-color: #F5F5F0;
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-}
-
-#description a:ACTIVE {
-    background: #fff;;
-}
-
-.contact {
-    font-size: 16px;
-    line-height: 16px;
-    margin-top:30px;
-}
-
-#logo img {
-    margin: 10px 0px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-}
-
-#services {
-    font-size: 80%;
-    width: 200px;
-    padding-top: 10px;
-}
-
-#services a.service {
-    font-size: 16pt;
-    line-height: 16pt;
-    display: block;
-    text-decoration: none;
-    font-family: 'Droid Sans', arial, serif; 
-    color: #586e75;
-    padding: 12px 20px;
-    width: 200px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    border-radius: 7px;
-    position: relative;
-    left: 0px;
-    -webkit-transition: all 0.1s ease-in-out;
-    -moz-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-}
-
-#services a.service:hover {
-    position: relative;
-    display: block;
-    margin-left: -7px;
-    background-color: #fdf6e3;
-    -webkit-transition: all 0.1s ease-in-out;
-    -moz-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-}
-
-#services a.service span {
-    position: relative;
-    top: 3px;
-}
-
-#services a.service img {
-    vertical-align: middle;
-    margin-right: 7px;
-    border: 0px;
-}
-
-@font-face {
-    font-family: 'Mono Social Icons Font';
-    src: url('../font/MonoSocialIconsFont-1.10.eot');
-    src: url('../font/MonoSocialIconsFont-1.10.eot?#iefix') format('embedded-opentype'),
-         url('../font/MonoSocialIconsFont-1.10.woff') format('woff'),
-         url('../font/MonoSocialIconsFont-1.10.ttf') format('truetype'),
-         url('../font/MonoSocialIconsFont-1.10.svg#MonoSocialIconsFont') format('svg');
-    src: url('../font/MonoSocialIconsFont-1.10.ttf') format('truetype');
-    font-weight: normal;
+h1 {
+    font-size: 24px;
     font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 0;
 }
 
-.symbol {
-    font-family: 'Mono Social Icons Font';
-    -webkit-text-rendering: optimizeLegibility;
-    -moz-text-rendering: optimizeLegibility;
-    -ms-text-rendering: optimizeLegibility;
-    -o-text-rendering: optimizeLegibility;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-font-smoothing: antialiased;
-    -ms-font-smoothing: antialiased;
-    -o-font-smoothing: antialiased;
-    font-smoothing: antialiased;
-    font-size: 130%;
+.social-links {
+    font-size: 20px;
+    font-style: normal;
+    font-variant: normal;
+    line-height: 40px;
+}
+
+.social-links a {
+    color: black;
+}
+
+.userpic {
+    border: 1px solid #777;
 }
